<resources>
    <string name="app_name">Challenge4</string>
    <string name="title">Kertas Gunting Batu</string>
    <string name="kertas">Kertas</string>
    <string name="batu">Batu</string>
    <string name="gunting">Gunting</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">CPU</string>
    <string name="player_2_friend">Player 2</string>
    <string name="image_kertas">image kertas</string>
    <string name="image_batu">image batu</string>
    <string name="image_gunting">image gunting</string>
    <string name="refresh">refresh</string>
    <string name="player_1_win">Pemain 1 MENANG!</string>
    <string name="player_2_win">Pemain 2 MENANG!</string>
    <string name="draw_result">DRAW</string>
    <string name="vs">VS</string>
    <string name="splash_screen_logo">Splash Screen Logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bermain_suit_bersama_dengan_teman">Bermain suit bersama dengan teman</string>
    <string name="bermain_suit_bersama_dengan_cpu">Bermain suit bersama dengan CPU</string>
    <string name="image_playing_with_friend">Image playing with friend</string>
    <string name="image_playing_with_cpu">Image playing with cpu</string>
    <string name="user_vs_teman">%1$s vs Teman</string>
    <string name="user_vs_cpu">%1$s vs CPU</string>
    <string name="pilih_lawanmu">Pilih Lawanmu</string>
    <string name="enemy_cpu">CPU</string>
    <string name="enemy_friend">Friend</string>
    <string name="tuliskan_namamu_di_bawah">Tuliskan namamu di bawah</string>
    <string name="image_user">Image User</string>
    <string name="username">Username</string>
    <string name="pemain_sedang_memilih">Pemain %1$s sedang memilih</string>
    <string name="hasil_permainan">Hasil Permainan</string>
    <string name="kembali_ke_menu">Kembali Ke Menu</string>
    <string name="main_lagi">Main Lagi</string>
    <string name="pemain_menang">%1$s \n Menang</string>
    <string name="musuh_memilih">%1$s memilih %2$s</string>
    <string name="nama_belum_terisi">Nama belum terisi</string>
</resources>