<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvTitleHasilPermainan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/hasil_permainan"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvPemainPemenang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pemain_menang"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleHasilPermainan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnMainLagi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_lagi"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPemainPemenang"
        android:backgroundTint="@color/buttonColor1"/>

    <Button
        android:id="@+id/btnKembaliKeMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnMainLagi"
        android:layout_marginTop="20dp"
        android:text="@string/kembali_ke_menu"
        android:backgroundTint="@color/buttonColor2"/>

</androidx.constraintlayout.widget.ConstraintLayout>