<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rlTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvKertas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/comic_neue"
            android:text="@string/kertas"
            android:textColor="@color/primary1"
            android:textFontWeight="600"
            android:textSize="30sp" />
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            />-->
        <TextView
            android:id="@+id/tvBatu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvKertas"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/comic_neue"
            android:text="@string/batu"
            android:textColor="@color/primary2"
            android:textFontWeight="600"
            android:textSize="30sp" />
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/tvKertas"-->
        <!--            />-->
        <TextView
            android:id="@+id/tvGunting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBatu"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/comic_neue"
            android:text="@string/gunting"
            android:textColor="@color/primary3"
            android:textFontWeight="600"
            android:textSize="30sp" />
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/tvBatu"-->
        <!--            />-->
    </RelativeLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="rlTitle" />

    <TextView
        android:id="@+id/tvP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/player_1"
        android:textColor="@color/secondary2"
        android:textFontWeight="600"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="@+id/barrierTitle" />

    <TextView
        android:id="@+id/tvP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/player_2"
        android:textColor="@color/secondary2"
        android:textFontWeight="600"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barrierTitle" />

    <ImageView
        android:id="@+id/ivKertasP1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginVertical="20dp"
        android:contentDescription="@string/image_kertas"
        android:src="@drawable/ic_kertas"
        app:layout_constraintTop_toBottomOf="@id/tvP1" />

    <ImageView
        android:id="@+id/ivKertasP2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginVertical="20dp"
        android:contentDescription="@string/image_kertas"
        android:src="@drawable/ic_kertas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvP2" />

    <ImageView
        android:id="@+id/ivBatuP1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginVertical="20dp"
        android:contentDescription="@string/image_batu"
        android:src="@drawable/ic_batu"
        app:layout_constraintTop_toBottomOf="@+id/ivKertasP1" />

    <ImageView
        android:id="@+id/ivBatuP2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginVertical="20dp"
        android:contentDescription="@string/image_batu"
        android:src="@drawable/ic_batu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivKertasP2" />

    <ImageView
        android:id="@+id/ivGuntingP1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginVertical="20dp"
        android:contentDescription="@string/image_gunting"
        android:src="@drawable/ic_gunting"
        app:layout_constraintTop_toBottomOf="@+id/ivBatuP1" />

    <ImageView
        android:id="@+id/ivGuntingP2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginVertical="20dp"
        android:contentDescription="@string/image_gunting"
        android:src="@drawable/ic_gunting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBatuP2" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue"
        android:padding="10dp"
        android:rotation="-30"
        android:text="@string/vs"
        android:textColor="@color/secondary5"
        android:textFontWeight="600"
        android:textSize="50sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/barrierGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barrierTitle" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="ivGuntingP1, ivGuntingP2" />

    <TextView
        android:id="@+id/tvStatusPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/pemain_1_sedang_memilih"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrierGame" />

    <ImageView
        android:id="@+id/ivRestart"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/refresh"
        android:src="@drawable/ic_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>